added readme and images to readme | fixed bug when cards are double clicked and prevented card flip between rounds

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://jessibramwell.github.io/memory-game/",
-  "name": "memory-game",
+  "homepage": "https://jessibramwell.github.io/react-memory-game/",
+  "name": "react-memory-game",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
